--- a/SunnyHomeCare/Views/Admin/AdminPatientCreate.cshtml
+++ b/SunnyHomeCare/Views/Admin/AdminPatientCreate.cshtml
@@ -19,8 +19,9 @@
         <div class="form-group">
             @Html.LabelFor(model => model.UserId, "UserId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @UserId
-             
+                @Html.EditorFor(model => model.UserId, new { htmlAttributes = new { @class = "form-control", @Value = @UserId } })
+                @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
+
             </div>
         </div>
 
