--- a/SunnyHomeCare/Views/Admin/AdminPersonalContactCreate.cshtml
+++ b/SunnyHomeCare/Views/Admin/AdminPersonalContactCreate.cshtml
@@ -8,7 +8,10 @@
 
 <h2>AdminPersonalContactCreate</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("AdminPersonalContactCreate", "Admin",
+        new { patientId = PatientId},
+        FormMethod.Post,
+        new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -16,14 +19,6 @@
     <h4>PersonalContact</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Id, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
-        </div>
-    </div>
 
     <div class="form-group">
         @Html.LabelFor(model => model.Firstname, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -85,6 +80,17 @@
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Create" class="btn btn-default" />
         </div>
+    </div>
+    <div>
+        @Html.ActionLink("Next", 
+       "Index",                                    // actionName -- change this to adminservicecontactcreate
+    "Admin",                                                   // controllerName
+    new
+    {                                                     // routeValues
+        patientId = PatientId
+    },
+    null                                                      // htmlAttributes
+)
     </div>
 </div>
 }
