--- a/SunnyHomeCare/Views/Admin/AdminPersonalContactCreate.cshtml
+++ b/SunnyHomeCare/Views/Admin/AdminPersonalContactCreate.cshtml
@@ -83,7 +83,7 @@
     </div>
     <div>
         @Html.ActionLink("Next", 
-       "Index",                                    // actionName -- change this to adminservicecontactcreate
+       "AdminServiceContactCreate",                                    // actionName -- change this to adminservicecontactcreate
     "Admin",                                                   // controllerName
     new
     {                                                     // routeValues
