--- a/SunnyHomeCare/Views/Admin/AdminLayout.cshtml
+++ b/SunnyHomeCare/Views/Admin/AdminLayout.cshtml
@@ -21,8 +21,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Admin")</li>
-                    <li>@Html.ActionLink("Details", "Details", "Admin")</li>
+                    <li>@Html.ActionLink("Users", "Users", "Admin")</li>
+                    <li>@Html.ActionLink("Visits", "Visits", "Admin")</li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
