--- a/SunnyHomeCare/Views/Shared/PersonalContactPV.cshtml
+++ b/SunnyHomeCare/Views/Shared/PersonalContactPV.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SunnyHomeCare.Models.PersonalContact
-
 <h2>More Info</h2>
-
+@{ 
+        foreach (var contact in Model.Patients)
 <div class="flex-container">
     <dl class="dl-horizontal">
         <dt>
@@ -70,3 +70,4 @@
 
     </dl>
 </div>
+    }
