--- a/SunnyHomeCare/Views/Admin/Patients.cshtml
+++ b/SunnyHomeCare/Views/Admin/Patients.cshtml
@@ -59,7 +59,7 @@
             @Html.DisplayFor(modelItem => item.Handicap)
         </td>
         <td>
-            @Html.ActionLink("Create Visit", "CreateVisit", new { id = item.Id }) |
+            @Html.ActionLink("Create Visit", "CreateVisit", new { id = item.Id }) 
         </td>
     </tr>
 }
