--- a/SunnyHomeCare/Views/Admin/AdminServiceContactCreate.cshtml
+++ b/SunnyHomeCare/Views/Admin/AdminServiceContactCreate.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SunnyHomeCare.Models.ServiceContact
 
 @{
-    ViewBag.Title = "AdminServiceContactCreate";
+    ViewBag.Title = "Add service contact to patient.";
     Layout = "~/Views/Admin/AdminLayout.cshtml";
     int PatientId = ViewBag.PatientId;
 
@@ -17,7 +17,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>ServiceContact</h4>
+        <h4>Service Contact details</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         
