--- a/SunnyHomeCare/Views/Admin/Create.cshtml
+++ b/SunnyHomeCare/Views/Admin/Create.cshtml
@@ -63,7 +63,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Role_id, "Role_id", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Role_id, "Role", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("Role_id", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Role_id, "", new { @class = "text-danger" })
