Syncing and updating MapMini

--- a/SunnyHomeCare/Views/Shared/MapMini.cshtml
+++ b/SunnyHomeCare/Views/Shared/MapMini.cshtml
@@ -61,5 +61,5 @@
     </script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCOV6ZltDi0Wwf3OyjwS7WjcEG79ICV8Ns&callback=initMap">
-    </script>
+    </script>  <!-- If you use this key ur mom gay! -->
   </body>
