--- a/SunnyHomeCare/Views/Shared/MapMini.cshtml
+++ b/SunnyHomeCare/Views/Shared/MapMini.cshtml
@@ -1,7 +1,8 @@
 <!-- PLEASE NOTE THAT THIS IS A VERY BAD APPROACH, SCRIPTS SHOULD BE MOVED TO DIFFERENT LAYER,
      IF WE SAVE TIME, PLEASE FIX THIS-->
-     
-    <h2> Map test </h2>
+@model SunnyHomeCare.Models.User
+
+    <h2> Map test, user firstname test: @Html.DisplayNameFor(model => model.Firstname) </h2>
     <style>
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
