--- a/SunnyHomeCare/Content/bootstrap.css
+++ b/SunnyHomeCare/Content/bootstrap.css
@@ -36,6 +36,13 @@ summary {
   display: block;
 }
 
+/* Flex container settup*/
+.flex-container {
+    display: flex;
+    flex-direction: row;
+}
+
+
 audio,
 canvas,
 video {
