--- a/SunnyHomeCare/Views/Admin/AdminServiceContactCreate.cshtml
+++ b/SunnyHomeCare/Views/Admin/AdminServiceContactCreate.cshtml
@@ -80,7 +80,7 @@
 
     <div>
         @Html.ActionLink("Done",
-           "Index",                                    // actionName -- change this to adminservicecontactcreate
+           "Users",                                    // actionName -- change this to adminservicecontactcreate
         "Admin",                                                   // controllerName
         new
         {                                                     // routeValues
