--- a/SunnyHomeCare/Views/Shared/PatientPV.cshtml
+++ b/SunnyHomeCare/Views/Shared/PatientPV.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SunnyHomeCare.Models.Patient
 
 <h2>More Info</h2>
-<div class="flex-container">
+<div>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Id)
