--- a/SunnyHomeCare/Views/Shared/ServiceContactPV.cshtml
+++ b/SunnyHomeCare/Views/Shared/ServiceContactPV.cshtml
@@ -1,8 +1,8 @@
 ﻿@model SunnyHomeCare.Models.ServiceContact
 
-<h2>Even More Info</h2>
+<h2>Service Contact Info</h2>
 
-<div class="flex-container">
+<div>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Firstname)
