--- a/SunnyHomeCare/Views/Shared/PersonalContactPV.cshtml
+++ b/SunnyHomeCare/Views/Shared/PersonalContactPV.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SunnyHomeCare.Models.PersonalContact
 
-<h2>More Info</h2>
-<div class="flex-container">
+<h2>Personal Contact Info</h2>
+<div>
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Id)
