--- a/SunnyHomeCare/Views/Admin/CreateVisit.cshtml
+++ b/SunnyHomeCare/Views/Admin/CreateVisit.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Admin/AdminLayout.cshtml";
     int PatientId = ViewBag.PatientId;
 }
- 
-<h2>Create Visit</h2>
+<h2>Upcoming Visits</h2>
 
+<h2>Create Visit</h2>
 
 @using (Html.BeginForm()) 
 {
