--- a/SunnyHomeCare/Views/Shared/PatientPV.cshtml
+++ b/SunnyHomeCare/Views/Shared/PatientPV.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SunnyHomeCare.Models.Patient
 
-<h2>More Info</h2>
+<h2>Patient Info</h2>
 <div>
     <dl class="dl-horizontal">
         <dt>
