--- a/SunnyHomeCare/Views/Admin/CreateVisit.cshtml
+++ b/SunnyHomeCare/Views/Admin/CreateVisit.cshtml
@@ -6,6 +6,7 @@
     int PatientId = ViewBag.PatientId;
 }
 <h2>Upcoming Visits</h2>
+@Html.Action("GetVisits", "Admin",  new {patientId = PatientId});
 
 <h2>Create Visit</h2>
 
@@ -14,7 +15,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Visit</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -54,7 +54,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Visits")
 </div>
 
 @section Scripts {
