--- a/SunnyHomeCare/Views/Admin/Details.cshtml
+++ b/SunnyHomeCare/Views/Admin/Details.cshtml
@@ -82,7 +82,7 @@
         // Validates if a Patient is selected and shows all neccesary info
         if (ViewBag.Role_Name == "Patient")
         {
-        @Html.Action("PatientDetails", "Admin", Model.Patients.FirstOrDefault());
+        @Html.Action("PatientDetails", "Admin", Model.Patients.FirstOrDefault())
         @Html.Action("PersonalContact", "Admin", Model.Patients.FirstOrDefault())
         @Html.Action("ServiceContact", "Admin", Model.Patients.FirstOrDefault())
         }
