--- a/SunnyHomeCare/Views/Admin/Details.cshtml
+++ b/SunnyHomeCare/Views/Admin/Details.cshtml
@@ -83,9 +83,10 @@
             @Html.Action("PatientDetails", "Admin", Model.Patients.FirstOrDefault())
             @Html.Action("PersonalContact", "Admin", Model.Patients.FirstOrDefault())
             @Html.Action("ServiceContact", "Admin", Model.Patients.FirstOrDefault())
-            @Html.Partial("MapMini", Model.Patients.FirstOrDefault())
+            @Html.Action("MapMini", "Admin", Model)
         }
     }
+    
   
 </div>
 <p>
