--- a/SunnyHomeCare/Views/Shared/VisitListPV.cshtml
+++ b/SunnyHomeCare/Views/Shared/VisitListPV.cshtml
@@ -14,6 +14,10 @@
         <th>
             Patient Name
         </th>
+
+        <th>
+            Patient Address
+        </th>
         <th></th>
     </tr>
 
@@ -29,9 +33,12 @@
             @Html.DisplayFor(modelItem => item.Patient.User.Firstname)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.DisplayFor(modelItem => item.Patient.User.Address)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
         </td>
     </tr>
 }
